[package]
name = "LangTrans"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# ONNX Runtime inference
ort = { version = "2.0.0-rc.11", features = ["half"] }
ndarray = "0.16"
half = "2.4"

# Tokenizer
tokenizers = { version = "0.21", features = ["http"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTML templates
askama = "0.15"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tempfile = "3.25.0"
